# WordFrequencies

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/solutions/: CMakeLists.txt  solutions.cpp  solutions.h
src/solutions/std_solution/: CMakeLists.txt  std_solution.cpp  std_solution.h
src/solutions/trie_solution/: CMakeLists.txt  trie_solution.cpp  trie_solution.h
